[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/car_spawner.gd" type="Script" id=1]

[node name="CarSpawner" type="Node2D" groups=["pausable"]]
position = Vector2( 60.5218, 22.5136 )
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CarEndPoint" type="Node2D" parent="."]
position = Vector2( -36.419, -0.132435 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
